--- a/po/ast.po
+++ b/po/ast.po
@@ -3,69 +3,69 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Piotr Sokół <psokol@jabster.pl>, 2010,2013
-# Piotr Strębski <strebski@o2.pl>, 2013
+# Ḷḷumex03 <tornes@opmbx.org>, 2014
+# Ḷḷumex03 <tornes@opmbx.org>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: Garcon\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-08-03 00:30+0200\n"
-"PO-Revision-Date: 2014-06-01 17:52+0000\n"
-"Last-Translator: OSWorld <michal.olber@osworld.pl>\n"
-"Language-Team: Polish (http://www.transifex.com/projects/p/garcon/language/pl/)\n"
+"PO-Revision-Date: 2014-10-25 19:17+0000\n"
+"Last-Translator: Ḷḷumex03 <tornes@opmbx.org>\n"
+"Language-Team: Asturian (http://www.transifex.com/projects/p/garcon/language/ast/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pl\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: ast\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../data/xfce/xfce-accessories.directory.in.h:1
 msgid "Accessories"
-msgstr "Akcesoria"
+msgstr "Accesorios"
 
 #: ../data/xfce/xfce-accessories.directory.in.h:2
 msgid "Common desktop tools and applications"
-msgstr "Obejmuje narzędzia i programy użytkowe"
+msgstr "Ferramientes comunes d'escritoriu y aplicaciones"
 
 #: ../data/xfce/xfce-development.directory.in.h:1
 msgid "Development"
-msgstr "Programowanie"
+msgstr "Desendolcu"
 
 #: ../data/xfce/xfce-development.directory.in.h:2
 msgid "Software development tools"
-msgstr "Zawiera narzędzia programistyczne"
+msgstr "Ferramientes de desendolcu de software"
 
 #: ../data/xfce/xfce-education.directory.in.h:1
 msgid "Education"
-msgstr "Edukacja"
+msgstr "Educación"
 
 #: ../data/xfce/xfce-education.directory.in.h:2
 msgid "Educational software"
-msgstr "Przechowuje oprogramowanie edukacyjne"
+msgstr "Software educacional"
 
 #: ../data/xfce/xfce-games.directory.in.h:1
 msgid "Games"
-msgstr "Gry"
+msgstr "Xuegos"
 
 #: ../data/xfce/xfce-games.directory.in.h:2
 msgid "Games, puzzles, and other fun software"
-msgstr "Gromadzi gry i inne oprogramowanie rozrywkowe"
+msgstr "Xuegos, puzles, y otru software divertíu"
 
 #: ../data/xfce/xfce-graphics.directory.in.h:1
 msgid "Graphics"
-msgstr "Grafika"
+msgstr "Gráficos"
 
 #: ../data/xfce/xfce-graphics.directory.in.h:2
 msgid "Graphics creation and manipulation applications"
-msgstr "Przechowuje programy służące do tworzenia i modyfikowania grafiki"
+msgstr "Creación de gráficos y manipulación d'aplicaciones"
 
 #: ../data/xfce/xfce-hardware.directory.in.h:1
 msgid "Hardware"
-msgstr "Sprzęt"
+msgstr "Hardware"
 
 #: ../data/xfce/xfce-hardware.directory.in.h:2
 msgid "Settings for several hardware devices"
-msgstr "Ustawienia do różnych urządzeń sprzętowych"
+msgstr "Axustes pa dellos preseos hardware"
 
 #: ../data/xfce/xfce-multimedia.directory.in.h:1
 msgid "Multimedia"
@@ -73,7 +73,7 @@ msgstr "Multimedia"
 
 #: ../data/xfce/xfce-multimedia.directory.in.h:2
 msgid "Audio and video players and editors"
-msgstr "Obejmuje odtwarzacze oraz edytory dźwięku i wideo"
+msgstr "Reproductores y editores d'audiu y videu"
 
 #: ../data/xfce/xfce-network.directory.in.h:1
 msgid "Internet"
@@ -81,80 +81,80 @@ msgstr "Internet"
 
 #: ../data/xfce/xfce-network.directory.in.h:2
 msgid "Applications for Internet access"
-msgstr "Obejmuje programy internetowe"
+msgstr "Aplicaciones pal accesu d'internet"
 
 #: ../data/xfce/xfce-office.directory.in.h:1
 msgid "Office"
-msgstr "Biuro"
+msgstr "Oficina"
 
 #: ../data/xfce/xfce-office.directory.in.h:2
 msgid "Office and productivity applications"
-msgstr "Przechowuje programy biurowe"
+msgstr "Aplicaciones d'oficina y productividá"
 
 #: ../data/xfce/xfce-other.directory.in.h:1
 msgid "Other"
-msgstr "Inne"
+msgstr "Otru"
 
 #: ../data/xfce/xfce-other.directory.in.h:2
 msgid "Applications that don't fit into other categories"
-msgstr "Zawiera programy nie pasujące do innych kategorii"
+msgstr "Aplicaciones que nun encaxen nes otres estayes"
 
 #: ../data/xfce/xfce-personal.directory.in.h:1
 msgid "Personal"
-msgstr "Osobiste"
+msgstr "Personal"
 
 #: ../data/xfce/xfce-personal.directory.in.h:2
 msgid "Personal settings"
-msgstr "Ustawienia osobiste"
+msgstr "Axustes personales"
 
 #: ../data/xfce/xfce-screensavers.directory.in.h:1
 msgid "Screensavers"
-msgstr "Wygaszacze ekranu"
+msgstr "Curiapantalles"
 
 #: ../data/xfce/xfce-screensavers.directory.in.h:2
 msgid "Screensaver applets"
-msgstr "Gromadzi aplety wygaszacza ekranu"
+msgstr "Applets de curiapantalles"
 
 #: ../data/xfce/xfce-settings.directory.in.h:1
 msgid "Settings"
-msgstr "Ustawienia"
+msgstr "Axustes"
 
 #: ../data/xfce/xfce-settings.directory.in.h:2
 msgid "Desktop and system settings applications"
-msgstr "Obejmuje programy do zarządzania ustawieniami systemu i pulpitu"
+msgstr "Aplicaciones d'escritoriu y axustes del sistema"
 
 #: ../data/xfce/xfce-system.directory.in.h:1
 msgid "System"
-msgstr "System"
+msgstr "Sistema"
 
 #: ../data/xfce/xfce-system.directory.in.h:2
 msgid "System tools and utilities"
-msgstr "Przechowuje narzędzia do zarządzania systemem"
+msgstr "Ferramientes del sistema y utilidaes"
 
 #: ../garcon/garcon-menu.c:702
 #, c-format
 msgid "File \"%s\" not found"
-msgstr "Nie odnaleziono pliku  „%s”"
+msgstr "Nun s'alcontro'l ficheru \"%s\""
 
 #: ../garcon/garcon-menu-parser.c:276
 #, c-format
 msgid "Could not load menu file data from %s: %s"
-msgstr "Nie udało się wczytać pliku menu %s: %s"
+msgstr "Nun pudieron cargase los datos del ficheru menú de %s: %s"
 
 #: ../garcon/garcon-menu-parser.c:283
 #, c-format
 msgid "Could not load menu file data from %s"
-msgstr "Nie udało się wczytać pliku menu %s"
+msgstr "Nun pudieron cargase los datos del ficheru menú de %s"
 
 #: ../garcon-gtk/garcon-gtk-menu.c:389
 #, c-format
 msgid "Failed to execute command \"%s\"."
-msgstr "Nie udało się wykonać polecenia „%s”."
+msgstr "Fallu al executar el comandu \"%s\"."
 
 #: ../garcon-gtk/garcon-gtk-menu.c:652
 msgid "No applications found"
-msgstr "Nie odnaleziono programów"
+msgstr "Nun s'alcontraron aplicaciones"
 
 #: ../garcon-gtk/garcon-gtk-menu.c:664
 msgid "Failed to load the applications menu"
-msgstr "Nie udało się wczytać menu programów"
+msgstr "Fallu al cargar el menú d'aplicaciones"
