--- a/po/es.po
+++ b/po/es.po
@@ -4,15 +4,16 @@
 # 
 # Translators:
 # Abel Martín <abel.martin.ruiz@gmail.com>, 2008
-# MC <correomc2000-ing@yahoo.es>, 2013
+# mc <correomc2000-ing@yahoo.es>, 2013
+# Pablo Roberto Francisco Lezaeta Reyes <prflr88@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: Garcon\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-08-03 00:30+0200\n"
-"PO-Revision-Date: 2013-08-05 09:44+0000\n"
-"Last-Translator: MC <correomc2000-ing@yahoo.es>\n"
-"Language-Team: Spanish (http://www.transifex.com/projects/p/xfce/language/es/)\n"
+"PO-Revision-Date: 2015-02-20 22:20+0000\n"
+"Last-Translator: Pablo Roberto Francisco Lezaeta Reyes <prflr88@gmail.com>\n"
+"Language-Team: Spanish (http://www.transifex.com/projects/p/garcon/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -33,7 +34,7 @@ msgstr "Desarrollo"
 
 #: ../data/xfce/xfce-development.directory.in.h:2
 msgid "Software development tools"
-msgstr "Herramientas software de desarrollo"
+msgstr "Herramientas de desarrollo de software"
 
 #: ../data/xfce/xfce-education.directory.in.h:1
 msgid "Education"
@@ -73,7 +74,7 @@ msgstr "Multimedia"
 
 #: ../data/xfce/xfce-multimedia.directory.in.h:2
 msgid "Audio and video players and editors"
-msgstr "Reproductores y editores de audio y vídeo"
+msgstr "Reproductores y editores de audio y video"
 
 #: ../data/xfce/xfce-network.directory.in.h:1
 msgid "Internet"
@@ -129,7 +130,7 @@ msgstr "Sistema"
 
 #: ../data/xfce/xfce-system.directory.in.h:2
 msgid "System tools and utilities"
-msgstr "Herramientas y utilidades de sistema"
+msgstr "Herramientas y utilidades del sistema"
 
 #: ../garcon/garcon-menu.c:702
 #, c-format
@@ -144,12 +145,12 @@ msgstr "No se pudieron cargar los datos del archivo de menú de %s: %s"
 #: ../garcon/garcon-menu-parser.c:283
 #, c-format
 msgid "Could not load menu file data from %s"
-msgstr "No se pudo cargar el menú de archivo de datos de %s"
+msgstr "No se pudieron cargar los datos del archivo de menú de %s"
 
 #: ../garcon-gtk/garcon-gtk-menu.c:389
 #, c-format
 msgid "Failed to execute command \"%s\"."
-msgstr "Fallo al ejecutar el comando \"%s\"."
+msgstr "No se pudo ejecutar la orden «%s»."
 
 #: ../garcon-gtk/garcon-gtk-menu.c:652
 msgid "No applications found"
@@ -157,4 +158,4 @@ msgstr "No se han encontrado aplicaciones"
 
 #: ../garcon-gtk/garcon-gtk-menu.c:664
 msgid "Failed to load the applications menu"
-msgstr "Fallo al cargar el menú de aplicaciones"
+msgstr "No se pudo cargar el menú de aplicaciones"
