--- a/po/fr.po
+++ b/po/fr.po
@@ -5,14 +5,16 @@
 # Translators:
 # jc1 <jc1.quebecos@gmail.com>, 2013
 # Maximilian Schleiss <maximilian@xfce.org>, 2009
+# Urien Desterres <urien.desterres@gmail.com>, 2014
+# Yannick Le Guen <leguen.yannick@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: Garcon\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-08-03 00:30+0200\n"
-"PO-Revision-Date: 2013-08-03 07:55+0000\n"
-"Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/projects/p/xfce/language/fr/)\n"
+"PO-Revision-Date: 2014-12-24 08:30+0000\n"
+"Last-Translator: Urien Desterres <urien.desterres@gmail.com>\n"
+"Language-Team: French (http://www.transifex.com/projects/p/garcon/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,7 +27,7 @@ msgstr "Accessoires"
 
 #: ../data/xfce/xfce-accessories.directory.in.h:2
 msgid "Common desktop tools and applications"
-msgstr "Outils et des applications bureautiques courantes"
+msgstr "Outils et applications bureautiques courantes"
 
 #: ../data/xfce/xfce-development.directory.in.h:1
 msgid "Development"
@@ -33,7 +35,7 @@ msgstr "Développement"
 
 #: ../data/xfce/xfce-development.directory.in.h:2
 msgid "Software development tools"
-msgstr "Outils de développement logiciels"
+msgstr "Outils de développement logiciel"
 
 #: ../data/xfce/xfce-education.directory.in.h:1
 msgid "Education"
@@ -41,7 +43,7 @@ msgstr "Éducation"
 
 #: ../data/xfce/xfce-education.directory.in.h:2
 msgid "Educational software"
-msgstr "Logiciel éducatifs"
+msgstr "Logiciels éducatifs"
 
 #: ../data/xfce/xfce-games.directory.in.h:1
 msgid "Games"
@@ -85,7 +87,7 @@ msgstr "Applications Internet"
 
 #: ../data/xfce/xfce-office.directory.in.h:1
 msgid "Office"
-msgstr "Bureau"
+msgstr "Bureautique"
 
 #: ../data/xfce/xfce-office.directory.in.h:2
 msgid "Office and productivity applications"
@@ -109,7 +111,7 @@ msgstr "Paramètres personnels"
 
 #: ../data/xfce/xfce-screensavers.directory.in.h:1
 msgid "Screensavers"
-msgstr "Économiseurs d'écran"
+msgstr "Économiseurs d’écran"
 
 #: ../data/xfce/xfce-screensavers.directory.in.h:2
 msgid "Screensaver applets"
@@ -134,7 +136,7 @@ msgstr "Outils et utilitaires système"
 #: ../garcon/garcon-menu.c:702
 #, c-format
 msgid "File \"%s\" not found"
-msgstr "Fichier \"%s\" non trouvé"
+msgstr "Fichier « %s » non trouvé"
 
 #: ../garcon/garcon-menu-parser.c:276
 #, c-format
@@ -149,7 +151,7 @@ msgstr "Impossible de charger les données du fichier de menu depuis %s"
 #: ../garcon-gtk/garcon-gtk-menu.c:389
 #, c-format
 msgid "Failed to execute command \"%s\"."
-msgstr "Impossible d'exécuter la commande « %s »."
+msgstr "Impossible d’exécuter la commande « %s »."
 
 #: ../garcon-gtk/garcon-gtk-menu.c:652
 msgid "No applications found"
