--- a/po/hr.po
+++ b/po/hr.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Garcon\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-08-03 00:30+0200\n"
-"PO-Revision-Date: 2013-08-26 16:25+0000\n"
-"Last-Translator: Ivica  Kolić <ikoli@yahoo.com>\n"
+"PO-Revision-Date: 2016-07-20 15:59+0000\n"
+"Last-Translator: gogo <trebelnik2@gmail.com>\n"
 "Language-Team: Croatian (http://www.transifex.com/projects/p/xfce/language/hr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,7 +26,7 @@ msgstr "Pomagala"
 
 #: ../data/xfce/xfce-accessories.directory.in.h:2
 msgid "Common desktop tools and applications"
-msgstr "Uobičajeni alati i pogrami radne površine"
+msgstr "Uobičajene aplikacije i pomagala radne površine"
 
 #: ../data/xfce/xfce-development.directory.in.h:1
 msgid "Development"
@@ -42,7 +42,7 @@ msgstr "Obrazovanje"
 
 #: ../data/xfce/xfce-education.directory.in.h:2
 msgid "Educational software"
-msgstr "Obrazovni software"
+msgstr "Obrazovni softver"
 
 #: ../data/xfce/xfce-games.directory.in.h:1
 msgid "Games"
@@ -50,7 +50,7 @@ msgstr "Igre"
 
 #: ../data/xfce/xfce-games.directory.in.h:2
 msgid "Games, puzzles, and other fun software"
-msgstr "Igre,zagonetke i drugi zabavni software"
+msgstr "Igre,zagonetke i ostali zabavni softver"
 
 #: ../data/xfce/xfce-graphics.directory.in.h:1
 msgid "Graphics"
@@ -58,15 +58,15 @@ msgstr "Grafika"
 
 #: ../data/xfce/xfce-graphics.directory.in.h:2
 msgid "Graphics creation and manipulation applications"
-msgstr "Programi za kreiranje i manipulaciju grafikom"
+msgstr "Aplikacije za stvaranje i manipulaciju grafikom"
 
 #: ../data/xfce/xfce-hardware.directory.in.h:1
 msgid "Hardware"
-msgstr "Sklopovlje"
+msgstr "Hardver"
 
 #: ../data/xfce/xfce-hardware.directory.in.h:2
 msgid "Settings for several hardware devices"
-msgstr "Postavke za nekoliko uređaja sklopovlja"
+msgstr "Postavke za nekoliko hardverskih uređaja"
 
 #: ../data/xfce/xfce-multimedia.directory.in.h:1
 msgid "Multimedia"
@@ -74,7 +74,7 @@ msgstr "Multimedija"
 
 #: ../data/xfce/xfce-multimedia.directory.in.h:2
 msgid "Audio and video players and editors"
-msgstr "Audio i video alati za puštanje i uređivanje"
+msgstr "Reproduktori i uređivači zvuka i video snimaka"
 
 #: ../data/xfce/xfce-network.directory.in.h:1
 msgid "Internet"
@@ -82,7 +82,7 @@ msgstr "Internet"
 
 #: ../data/xfce/xfce-network.directory.in.h:2
 msgid "Applications for Internet access"
-msgstr "Programi za pristup internetu"
+msgstr "Aplikacije za pristup internetu"
 
 #: ../data/xfce/xfce-office.directory.in.h:1
 msgid "Office"
@@ -90,7 +90,7 @@ msgstr "Ured"
 
 #: ../data/xfce/xfce-office.directory.in.h:2
 msgid "Office and productivity applications"
-msgstr "Programi ureda i produktivnosti"
+msgstr "Aplikacije za ured i produktivnosti"
 
 #: ../data/xfce/xfce-other.directory.in.h:1
 msgid "Other"
@@ -98,7 +98,7 @@ msgstr "Ostalo"
 
 #: ../data/xfce/xfce-other.directory.in.h:2
 msgid "Applications that don't fit into other categories"
-msgstr "Programi koji ne spadaju u druge kategorije"
+msgstr "Aplikacije koje ne pripadaju ostalim kategorijama"
 
 #: ../data/xfce/xfce-personal.directory.in.h:1
 msgid "Personal"
@@ -114,7 +114,7 @@ msgstr "Čuvari zaslona"
 
 #: ../data/xfce/xfce-screensavers.directory.in.h:2
 msgid "Screensaver applets"
-msgstr "Programčići čuvara zaslona"
+msgstr "Apleti čuvara zaslona"
 
 #: ../data/xfce/xfce-settings.directory.in.h:1
 msgid "Settings"
@@ -122,7 +122,7 @@ msgstr "Postavke"
 
 #: ../data/xfce/xfce-settings.directory.in.h:2
 msgid "Desktop and system settings applications"
-msgstr "Programi postavki radne površine i sustava"
+msgstr "Aplikacije postavki radne površine i sustava"
 
 #: ../data/xfce/xfce-system.directory.in.h:1
 msgid "System"
@@ -130,7 +130,7 @@ msgstr "Sustav"
 
 #: ../data/xfce/xfce-system.directory.in.h:2
 msgid "System tools and utilities"
-msgstr "Alati i pomagala sustava"
+msgstr "Alati sustava i pomagala"
 
 #: ../garcon/garcon-menu.c:702
 #, c-format
@@ -140,22 +140,22 @@ msgstr "Datoteka \"%s\" nije pronađena"
 #: ../garcon/garcon-menu-parser.c:276
 #, c-format
 msgid "Could not load menu file data from %s: %s"
-msgstr "Ne mogu učitati datoteku izbornika iz %s: %s"
+msgstr "Nemoguće učitavanje datoteke podataka izbornika iz %s: %s"
 
 #: ../garcon/garcon-menu-parser.c:283
 #, c-format
 msgid "Could not load menu file data from %s"
-msgstr "Ne mogu učitati datoteku izbornika iz %s"
+msgstr "Nemoguće učitavanje datoteke podataka izbornika iz %s"
 
 #: ../garcon-gtk/garcon-gtk-menu.c:389
 #, c-format
 msgid "Failed to execute command \"%s\"."
-msgstr "Neuspjlo izvršenje naredbe \"%s\"."
+msgstr "Neuspješno pokretanje naredbe \"%s\"."
 
 #: ../garcon-gtk/garcon-gtk-menu.c:652
 msgid "No applications found"
-msgstr "Nijedan program nije nađen"
+msgstr "Nema pronađene aplikacije"
 
 #: ../garcon-gtk/garcon-gtk-menu.c:664
 msgid "Failed to load the applications menu"
-msgstr "Neuspjelo učitavanje izbornika programa"
+msgstr "Neuspješno učitavanje izbornika aplikacija"
